# serializer version: 1
# name: test_render_remote_script_multi_service
  '''
  set -u
  STACKS_DIR=/opt/docker-server/stacks
  RESTARTED=0
  FAILED=0
  for SVC in 'jupyter' 'marimo' 'code-server'; do
      if [ ! -d "$STACKS_DIR/$SVC" ]; then
          echo "  ✗ Restart $SVC: stack directory missing on server" >&2
          FAILED=$((FAILED + 1))
          continue
      fi
      if (cd "$STACKS_DIR/$SVC" && docker compose restart 2>&1); then
          echo "  ✓ Restarted $SVC"
          RESTARTED=$((RESTARTED + 1))
      else
          echo "  ✗ Restart $SVC: docker compose restart returned non-zero" >&2
          FAILED=$((FAILED + 1))
      fi
  done
  echo "RESULT restarted=$RESTARTED failed=$FAILED"
  
  '''
# ---
# name: test_render_remote_script_single_service
  '''
  set -u
  STACKS_DIR=/opt/docker-server/stacks
  RESTARTED=0
  FAILED=0
  for SVC in 'jupyter'; do
      if [ ! -d "$STACKS_DIR/$SVC" ]; then
          echo "  ✗ Restart $SVC: stack directory missing on server" >&2
          FAILED=$((FAILED + 1))
          continue
      fi
      if (cd "$STACKS_DIR/$SVC" && docker compose restart 2>&1); then
          echo "  ✓ Restarted $SVC"
          RESTARTED=$((RESTARTED + 1))
      else
          echo "  ✗ Restart $SVC: docker compose restart returned non-zero" >&2
          FAILED=$((FAILED + 1))
      fi
  done
  echo "RESULT restarted=$RESTARTED failed=$FAILED"
  
  '''
# ---
